Fix spacing on names.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -51,7 +51,7 @@ nav.navbar-slidein-active {
 }
 
 div.navfix {
-  padding-top: 50px;
+  padding-top: 70px;
   height: 100%;
 }
 
